docker bug fixes, docs refine
