# docs/swagger.json
@@ -31,18 +31,14 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.AccountResponse"
+                            "$ref": "#/definitions/model.DocResponseSuccess"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/model.AccountResponse"
+                            "$ref": "#/definitions/model.DocResponseBadRequest"
                         }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {}
                     }
                 }
             }
@@ -110,6 +106,32 @@
                 },
                 "success": {
                     "type": "boolean"
+                }
+            }
+        },
+        "model.DocResponseBadRequest": {
+            "type": "object",
+            "properties": {
+                "reason": {
+                    "type": "string",
+                    "example": "Password is too short"
+                },
+                "success": {
+                    "type": "boolean",
+                    "example": false
+                }
+            }
+        },
+        "model.DocResponseSuccess": {
+            "type": "object",
+            "properties": {
+                "reason": {
+                    "type": "string",
+                    "example": ""
+                },
+                "success": {
+                    "type": "boolean",
+                    "example": true
                 }
             }
         }
